--- a/.github/workflows/PlotlyArtifacts.yml
+++ b/.github/workflows/PlotlyArtifacts.yml
@@ -116,3 +116,35 @@ jobs:
               \"templates\",
               \"\$release_url/templates-\$templates_version.tar.gz\")
           "
+
+      - name: Create Pull Request if Artifacts.toml changed
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Check if Artifacts.toml has changes
+          if git diff --quiet Artifacts.toml; then
+            echo "Artifacts.toml has not changed, skipping PR creation"
+            exit 0
+          fi
+
+          # Configure git
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          # Create a new branch
+          BRANCH_NAME="update-artifacts-$(date +%s)"
+          git checkout -b "$BRANCH_NAME"
+
+          # Commit the changes
+          git add Artifacts.toml
+          git commit -m "Update Artifacts.toml with latest versions"
+
+          # Push the branch
+          git push origin "$BRANCH_NAME"
+
+          # Create a pull request
+          gh pr create \
+            --title "Update Artifacts.toml with latest versions" \
+            --body "This PR updates Artifacts.toml with the latest artifact versions from the Artifacts release." \
+            --head "$BRANCH_NAME" \
+            --base main
