--- a/.github/workflows/PlotlyArtifacts.yml
+++ b/.github/workflows/PlotlyArtifacts.yml
@@ -86,6 +86,9 @@ jobs:
 
           echo "Uploaded all artifacts to Artifacts release"
 
+      - name: Checkout repository
+        uses: actions/checkout@v6
+
       - name: Update Artifacts.toml with ArtifactUtils.jl
         uses: julia-actions/setup-julia@v1
         with:
