--- a/.github/workflows/PlotlyArtifacts.yml
+++ b/.github/workflows/PlotlyArtifacts.yml
@@ -5,6 +5,9 @@ on:
     # Run once daily at 00:00 UTC
     - cron: '0 0 * * *'
   workflow_dispatch:
+  push:
+    paths:
+      - '.github/workflows/PlotlyArtifacts.yml'
 
 permissions:
   contents: write
