--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,13 @@
 name = "PlotlyArtifacts"
 uuid = "1b8d8d90-ffa2-41b8-b4ef-7f17ea431f2f"
-version = "0.0.2"
+version = "0.0.1"
 authors = ["Josh Day <emailjoshday@gmail.com> and contributors"]
 
+[deps]
+LazyArtifacts = "4af54fe1-eca0-43a8-85a7-787d91b784e3"
+
 [compat]
+LazyArtifacts = "1.11.0"
 julia = "1.6.7"
 
 [extras]
